Bug 482603 - Player widget can't rewind Spotify songs.
Summary: Player widget can't rewind Spotify songs.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Media Player widget (other bugs)
Version First Reported In: 6.0.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-06 22:40 UTC by worthymelight
Modified: 2024-03-11 21:50 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.2
Sentry Crash Report:


Attachments
Player widget can't rewind Spotify songs, the slider is dragged, but the song itself does not rewind. (945.75 KB, video/mp4)
2024-03-06 22:40 UTC, worthymelight
Details

Note You need to log in before you can comment on or make changes to this bug.
Description worthymelight 2024-03-06 22:40:55 UTC
Created attachment 166518 [details]
Player widget can't rewind Spotify songs, the slider is dragged, but the song itself does not rewind.

SUMMARY
Player widget can't rewind Spotify songs, the slider is dragged, but the song itself does not rewind.

Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
Comment 1 Vlad 2024-03-07 15:40:34 UTC
Comment on attachment 166518 [details]
Player widget can't rewind Spotify songs, the slider is dragged, but the song itself does not rewind.

same
Comment 2 vasil 2024-03-07 15:44:31 UTC
oh yes i have same problem
Comment 3 Nate Graham 2024-03-07 19:33:54 UTC
Maybe Spotify doesn't expose this functionality to us but we don't have a way of disabling the UI for it?
Comment 4 Vlad 2024-03-07 19:38:54 UTC
(In reply to Nate Graham from comment #3)
> Maybe Spotify doesn't expose this functionality to us but we don't have away of disabling the UI for it?

In plasma 5 rewinding worked
Comment 5 worthymelight 2024-03-08 10:26:27 UTC
(In reply to Nate Graham from comment #3)
> Maybe Spotify doesn't expose this functionality to us but we don't have a way of disabling the UI for it?
But in Plasma 5 rewinding worked, in Plasma 6 - no
Comment 6 AlexDeLorenzo.dev 2024-03-11 01:24:34 UTC
I can confirm this bug, and it isn't just Spotify that is affected. Anything that exports an MPRIS interface is unable to seek using the Media Player widget.
Comment 7 Fushan Wen 2024-03-11 08:03:00 UTC
Please report the bug to Spotify if the slider works for other players
Comment 8 Fushan Wen 2024-03-11 08:49:06 UTC
No problem with Audacious, Firefox with pbi and VLC, so it's likely a bug in Spotify.
Comment 9 AlexDeLorenzo.dev 2024-03-11 10:45:17 UTC
On my end, it looks like the Media Player widget isn't calling `org.mpris.MediaPlayer2.Player.Seek()` or `SetPosition()` via D-Bus. 

Other MPRIS clients like `playerctl` can successfully call the `Seek()` method without a problem, and successfully seek on media players.

It's not just Spotify with this problem, I cannot with seek with the widget at all with any media player.
Comment 10 Bug Janitor Service 2024-03-11 17:16:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4047
Comment 11 Fushan Wen 2024-03-11 18:04:32 UTC
Git commit e06c048d74980151791ee3bb2e35fdcf1ad9147e by Fushan Wen.
Committed on 11/03/2024 at 18:04.
Pushed by fusionfuture into branch 'master'.

libkmpris: work around nonstandard players

Some players return strings for mpris:trackid, which does not conform
to the MPRIS2 standard. This adds a workaround to not let the behavior
affect the position slider because setting position requires a track id.
FIXED-IN: 6.0.2

M  +13   -1    libkmpris/playercontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e06c048d74980151791ee3bb2e35fdcf1ad9147e
Comment 12 Fushan Wen 2024-03-11 18:22:58 UTC
Git commit f049ffd07b71ce9f3239c5bd8267281049b5f5f1 by Fushan Wen.
Committed on 11/03/2024 at 18:04.
Pushed by fusionfuture into branch 'Plasma/6.0'.

libkmpris: work around nonstandard players

Some players return strings for mpris:trackid, which does not conform
to the MPRIS2 standard. This adds a workaround to not let the behavior
affect the position slider because setting position requires a track id.
FIXED-IN: 6.0.2


(cherry picked from commit e06c048d74980151791ee3bb2e35fdcf1ad9147e)

M  +13   -1    libkmpris/playercontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f049ffd07b71ce9f3239c5bd8267281049b5f5f1
Comment 13 AlexDeLorenzo.dev 2024-03-11 21:50:36 UTC
Thanks Fushan!