libkmpris: work around nonstandard players

Some players return strings for mpris:trackid, which does not conform
to the MPRIS2 standard. This adds a workaround to not let the behavior
affect the position slider because setting position requires a track id.

BUG: 482603
FIXED-IN: 6.0.2


(cherry picked from commit e06c048d74980151791ee3bb2e35fdcf1ad9147e)